# esp32-gui-lvgl

./: README.md  sdkconfig
code/lvgl/: CMakeLists.txt  filelist.txt  lvgl.ino  ui.h  ui_Screen2.c  ui_comp_hook.c  ui_font_bruce_forever_39.c  ui_font_monkey_6.c  ui_font_upper_clock_15.c  ui_font_upper_clock_18.c  ui_font_upper_clock_40.c  ui_font_upper_clock_55.c  ui_font_upperlock_20.c  ui_img_1563899303.c  ui_img_898859503.c
code/main/ui/: ui_Screen2.h  ui_font_antasilla_24.c  ui_font_monkey_18.c
components/lvgl__lvgl/src/core/: lv_refr.c
main/: CMakeLists.txt  main.c
main/ui/: ui.c  ui_Screen1.c  ui_Screen1.h  ui_font_broken_12.c  ui_font_bronken.c  ui_font_upper_clock_22.c
