idf_component_register(
    SRCS 
        "./main.c" 
        "./Audio_Driver/PCM5101.c" 
        "./LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c" 
        "./LCD_Driver/ST7789.c"
        "./Touch_Driver/esp_lcd_touch/esp_lcd_touch.c"        
        "./Touch_Driver/CST328.c"  
        "./LVGL_Driver/LVGL_Driver.c"
        "./LVGL_UI/LVGL_Example.c"
        "./LVGL_UI/LVGL_Music.c"
        "./SD_Card/SD_MMC.c" 
        "./I2C_Driver/I2C_Driver.c"
        "./PCF85063/PCF85063.c"
        "./QMI8658/QMI8658.c"
        "./BAT_Driver/BAT_Driver.c"
        "./PWR_Key/PWR_Key.c"
        "./Wireless/Wireless.c"
        "./ui/ui.c"
        "./ui/ui_Screen1.c"
        "./ui/ui_Screen2.c"
        "./ui/ui_helpers.c"
        "./ui/ui_font_upper_clock_40.c"
        "./ui/ui_img_1506795909.c"
        "./ui/ui_font_upper_clock_55.c"
        "./ui/ui_font_upperlock_20.c"
        "./ui/ui_font_upper_clock_22.c"
        "./ui/ui_font_upper_clock_18.c"
        "./ui/ui_font_upper_clock_15.c"
        "./ui/ui_font_antasilla_24.c"
        "./ui/ui_font_monkey_18.c"
        "./ui/ui_font_monkey_6.c"
        "./ui/ui_font_bronken.c"
        "./ui/ui_font_broken_12.c"
        "./ui/ui_font_antasilla_24.c"
        "./ui/ui_font_bruce_forever_39.c"
        "./ui/ui_img_483845322.c"
        "./ui/ui_img_898859503.c"
        "./ui/ui_img_1506795909.c"
        "./ui/ui_img_1563899303.c"
    INCLUDE_DIRS 
        "./Audio_Driver" 
        "./LCD_Driver/Vernon_ST7789T" 
        "./LCD_Driver" 
        "./Touch_Driver/esp_lcd_touch"     
        "./Touch_Driver"
        "./LVGL_Driver" 
        "./LVGL_UI" 
        "./SD_Card" 
        "./I2C_Driver"
        "./PCF85063"
        "./QMI8658"
        "./BAT_Driver"
        "./PWR_Key"
        "./Wireless"
        "./ui"
        "."
)
